<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:local="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootView"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_background"
        android:paddingStart="30dp"
        android:paddingTop="20dp"
        android:paddingEnd="30dp"
        android:paddingBottom="50dp"
        android:layout_marginTop="40dp"
        local:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            local:layout_constraintEnd_toEndOf="parent"
            local:layout_constraintStart_toStartOf="parent"
            local:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email_user"
                android:textColor="@color/white"
                android:textSize="12sp" />


            <EditText
                android:id="@+id/etUserName"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/rounded_whitetrans"
                android:ellipsize="end"
                android:inputType="textNoSuggestions"
                android:padding="5dp"
                android:singleLine="true"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_err_username"
                style="@style/TextAppearance.AppCompat.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:textSize="12sp"
                android:text="@string/tidak_boleh_kosong"
                android:textColor="@color/colorRed" />


            <TextView
                android:id="@+id/textView34"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/password"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                local:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/etPasswordUser"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/rounded_whitetrans"
                    android:ellipsize="end"
                    android:inputType="textPassword"
                    android:padding="5dp"
                    android:layout_marginTop="10dp"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/tv_error_password"
                style="@style/TextAppearance.AppCompat.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:textSize="12sp"
                android:text="@string/password_tidak_boleh_kosong"
                android:textColor="@color/colorRed" />
        </LinearLayout>


        <TextView
            android:id="@+id/tvForgotPassword"
            style="@style/TextAppearance.AppCompat.Body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:layout_marginTop="10dp"
            local:layout_constraintStart_toStartOf="parent"
            local:layout_constraintTop_toBottomOf="@+id/linearLayout5"
            android:text="@string/lupa_kata_sandi" />

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            local:layout_constraintBottom_toBottomOf="parent"
            local:layout_constraintEnd_toEndOf="parent"
            local:layout_constraintStart_toStartOf="parent"
            local:layout_constraintTop_toBottomOf="@+id/tvForgotPassword">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/belum_punya_akun"
                android:textColor="@color/white"
                android:textSize="12sp"
                tools:text="Registrasi" />

            <TextView
                android:id="@+id/tvRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:padding="5dp"
                android:text="@string/daftar_disini"
                android:textColor="@color/colorLightGreen"
                android:textSize="12sp"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/rounded_grey"
        android:clickable="false"
        android:orientation="vertical"
        android:textColor="@color/white"
        local:layout_constraintBottom_toBottomOf="parent"
        local:layout_constraintEnd_toEndOf="parent"
        local:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/colorGreyDark"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>