<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootRegistration"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:importantForAutofill="noExcludeDescendants"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/linear_registration"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/gradient_background"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/nama_lengkap"
                        android:textColor="@color/white" />
                    
                    <EditText
                        android:id="@+id/etNama"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/rounded_whitetrans"
                        android:inputType="text|textCapWords"
                        android:padding="5dp"
                        android:singleLine="true"
                        android:longClickable="false"
                        android:textIsSelectable="false"
                        android:textSelectHandle="@drawable/text_select_handle"
                        android:textSelectHandleLeft="@drawable/text_select_handle"
                        android:textSelectHandleRight="@drawable/text_select_handle"
                        android:textColor="@color/white"
                        android:textColorHint="@color/textHintColorGray"
                        android:textSize="16sp"/>

                    <TextView
                        android:id="@+id/tvErrorName"
                        style="@style/TextAppearance.AppCompat.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:textColor="@color/colorRed"
                        android:textSize="12sp"
                        tools:text="Error Text" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/email"
                        android:textColor="@color/white" />

                    <EditText
                        android:id="@+id/etEmail"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/rounded_whitetrans"
                        android:inputType="textEmailAddress"
                        android:padding="5dp"
                        android:singleLine="true"
                        android:longClickable="false"
                        android:textIsSelectable="false"
                        android:textSelectHandle="@drawable/text_select_handle"
                        android:textSelectHandleLeft="@drawable/text_select_handle"
                        android:textSelectHandleRight="@drawable/text_select_handle"
                        android:textColor="@color/white"
                        android:textColorHint="@color/textHintColorGray"
                        android:textSize="16sp"/>

                    <TextView
                        android:id="@+id/tvErrorEmail"
                        style="@style/TextAppearance.AppCompat.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:textColor="@color/colorRed"
                        android:textSize="12sp"
                        tools:text="Error Text Email" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/password"
                        android:textColor="@color/white" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-10dp"
                        app:passwordToggleEnabled="true">

                        <EditText
                            android:id="@+id/etPassword"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:background="@drawable/rounded_whitetrans"
                            android:inputType="textPassword"
                            android:padding="5dp"
                            android:singleLine="true"
                            android:longClickable="false"
                            android:textIsSelectable="false"
                            android:textSelectHandle="@drawable/text_select_handle"
                            android:textSelectHandleLeft="@drawable/text_select_handle"
                            android:textSelectHandleRight="@drawable/text_select_handle"
                            android:textColor="@color/white"
                            android:textColorHint="@color/textHintColorGray"
                            android:textSize="16sp"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/tvErrorPassword"
                        style="@style/TextAppearance.AppCompat.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:textSize="12sp"
                        android:textColor="@color/colorRed"
                        tools:text="Error Password" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/konfirmasi_kata_sandi"
                        android:textColor="@color/white" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:passwordToggleEnabled="true">

                        <EditText
                            android:id="@+id/etPasswordConfirm"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:background="@drawable/rounded_whitetrans"
                            android:inputType="textPassword"
                            android:padding="5dp"
                            android:singleLine="true"
                            android:longClickable="false"
                            android:textIsSelectable="false"
                            android:textSelectHandle="@drawable/text_select_handle"
                            android:textSelectHandleLeft="@drawable/text_select_handle"
                            android:textSelectHandleRight="@drawable/text_select_handle"
                            android:textColor="@color/white"
                            android:textColorHint="@color/textHintColorGray"
                            android:textSize="16sp"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/tvErrorPasswordConfirm"
                        style="@style/TextAppearance.AppCompat.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:textColor="@color/colorRed"
                        android:textSize="12sp"
                        tools:text="Error Password Confirm" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="60dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="end"
                            android:text="@string/sudah_punya_akun"
                            android:textColor="@color/white" />

                        <TextView
                            android:id="@+id/tv_login_here"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginStart="5dp"
                            android:text="@string/login_di_sini"
                            android:textColor="@color/colorGreen"
                            android:textStyle="bold" />

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

    <FrameLayout
        android:id="@+id/framebutton_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:id="@+id/button_next"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginBottom="-30dp"
            android:background="@drawable/rounded_grey"
            android:clickable="true"
            android:orientation="vertical"
            android:textColor="@color/white">

            <TextView
                android:id="@+id/tv_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/daftar"
                android:textAllCaps="false"
                android:textColor="@color/colorGreyDark"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>
    </FrameLayout>
</RelativeLayout>